[package]
name = "actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
chrono = "0.4.32"
env_logger = "0.11.0"
lazy_static = "1.4.0"
log = "0.4.20"
rusqlite = "0.30.0"
serde = {version = "1.0.195", features = ["derive"]}
